crates/check_cli/tests/snapshots/main_commands_lint/linter_finds_nested_package_json_for_no_undeclared_dependencies.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredDependencies": "on"
      }
    }
  }
}
```

## `frontend/file1.js`

```js
import 'react-dom'
```

## `frontend/package.json`

```json
{
    "dependencies": {
        "react": "19.0.0"
    }
}
```

## `package.json`

```json
{
    "dependencies": {
        "react-dom": "19.0.0"
    }
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
frontend/file1.js:1:8 lint/correctness/noUndeclaredDependencies ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Dependency react-dom isn't specified in frontend/package.json.
  
  > 1 │ import 'react-dom'
      │        ^^^^^^^^^^^
  
  i This could lead to errors.
  
  i Add the dependency in your manifest.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
