crates/check_cli/tests/snapshots/main_commands_lint/linter_shows_the_default_severity_of_rule_on.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "style": {
        "noVar": "on"
      }
    }
  }
}
```

## `file1.js`

```js
var name = 'tobias'
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
check.json:5:17 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Found an unknown key `noVar`.
  
    3 │         "rules": {
    4 │             "style": {
  > 5 │                 "noVar": "on"
      │                 ^^^^^^^
    6 │             }
    7 │         }
  
  i Known keys:
  
  - recommended
  - noCommonJs
  - noDefaultExport
  - noDescendingSpecificity
  - noDoneCallback
  - noEnum
  - noExportedImports
  - noHeadElement
  - noImplicitBoolean
  - noInferrableTypes
  - noMagicNumbers
  - noNamespace
  - noNegationElse
  - noNestedTernary
  - noNonNullAssertion
  - noParameterAssign
  - noParameterProperties
  - noProcessEnv
  - noRestrictedGlobals
  - noRestrictedImports
  - noRestrictedTypes
  - noShoutyConstants
  - noSubstr
  - noUnusedTemplateLiteral
  - noUselessElse
  - noValueAtRule
  - noYodaExpression
  - useArrayLiterals
  - useAsConstAssertion
  - useAtIndex
  - useBlockStatements
  - useCollapsedElseIf
  - useCollapsedIf
  - useComponentExportOnlyModules
  - useConsistentArrayType
  - useConsistentBuiltinInstantiation
  - useConsistentCurlyBraces
  - useConsistentMemberAccessibility
  - useConsistentObjectDefinitions
  - useConst
  - useDefaultParameterLast
  - useDefaultSwitchClause
  - useDeprecatedReason
  - useEnumInitializers
  - useExplicitLengthCheck
  - useExponentiationOperator
  - useExportType
  - useExportsLast
  - useFilenamingConvention
  - useForOf
  - useFragmentSyntax
  - useGraphqlNamingConvention
  - useGroupedAccessorPairs
  - useImportType
  - useLiteralEnumMembers
  - useNamingConvention
  - useNodeAssertStrict
  - useNodejsImportProtocol
  - useNumberNamespace
  - useNumericSeparators
  - useObjectSpread
  - useReadonlyClassProperties
  - useSelfClosingElements
  - useShorthandAssign
  - useShorthandFunctionType
  - useSingleVarDeclarator
  - useSymbolDescription
  - useTemplate
  - useThrowNewError
  - useThrowOnlyError
  - useTrimStartEnd
  - useUnifiedTypeSignatures
  

```
