crates/check_cli/tests/snapshots/main_commands_lint/no_lint_if_files_are_listed_in_ignore_option.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "files": { "includes": ["**", "!test1.js"] },
  "linter": { "includes": ["**", "!test2.js"] }
}
```

## `test1.js`

```js
(1 >= -0)
```

## `test2.js`

```js
(1 >= -0)
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - test1.js
  - test2.js
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
