crates/check_cli/tests/snapshots/main_commands_lint/no_lint_if_linter_is_disabled_when_run_apply_check_jsonc.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.jsonc`

```json
{
  // I am a comment
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js
(1 >= -0)
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - fix.js
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
